# Habits-tracker

./: .gitlab-ci.yml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  auth_routes.py  config.py  extentions.py  main.py  models.py  routes.py
app/blueprints/: auth.py  habit_log.py  habits.py  statistics.py  users.py
app/models/: habit.py  habit_log.py  user.py
app/schemas/: habit.py  habit_log.py  habit_stats.py  user.py
app/services/: habit_stats.py  user_stats.py
app/utils/: habit_helpers.py  mixins.py
tests/: conftest.py  factories.py  helpers.py
tests/auth/: test_auth.py
tests/fixtures/: habits.py  logs.py  statistics.py  users.py
tests/habits/: test_habit_logs.py  test_habit_stats.py  test_habits.py
tests/statistics/: test_user_statistics.py
tests/users/: test_users.py
